<resources>
    <string name="app_name">AlconTech</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="TextEnterNumber">Ingrese el numero de la alarma principal</string>
    <string name="BtnSaveNumber">Guardar numero</string>
    <string name="TxtBienvenida">¡Bienvenido(a)!</string>
    <string name="TxtThanks">Gracias por adquirir un producto de Uva Robotics</string>
    <string name="EditNumber">Ingrese el nuevo numero de la alarma principal</string>
    <string name="NumeroActual">Numero actual:</string>
    <string name="ShowActualNumber">Mostrar numero actual</string>
    <string name="PanicoButtonText">Panico</string>
    <string name="AlertaButtonText">Alerta</string>
    <string name="QuienButtonText">¿Quien pide auxilio?</string>
    <string name="TerminosCondiciones">Copyright, 2017, SPOOLBU y Jonathan Espinoza Gutierrez.</string>
</resources>
